Update youtube links

--- a/src/readings/lending_and_credit.yaml
+++ b/src/readings/lending_and_credit.yaml
@@ -2,7 +2,7 @@
   title: How DeFi Lending works?
   shortTitle: Lending
   type: YoutubeVideo
-  url: https://youtu.be/rcLlamPNvrA
+  url: https://www.youtube.com/watch?v=rcLlamPNvrA
   subTopics:
     - "terminology"
   details: |
@@ -18,7 +18,7 @@
   title: Flash Loans
   shortTitle: Flash Loans
   type: YoutubeVideo
-  url: https://youtu.be/mCJUhnXQ76s
+  url: https://www.youtube.com/watch?v=mCJUhnXQ76s
   subTopics:
     - "flash-loans"
   details: |
