--- a/src/course.yaml
+++ b/src/course.yaml
@@ -91,14 +91,9 @@ topics:
     completionWeek: Done
   - title: Derivatives
     key: derivatives
-    details: |
-      This chapter explains the popular derivatives protocols and provides insights into Yield Protocol and Synthetix.
-      Details 
-      * Yield Protocol
-      * dYdX
-      * Synthetix
+    details: derivatives.yaml
     readings: blockchain_basics.yaml
-    summaries: blockchain_basics.yaml
+    summaries: derivatives.yaml
     questions: blockchain_basics.yaml
     status: To Do
     completionWeek: First Week September
