--- a/src/details/derivates.yaml
+++ b/src/details/derivates.yaml
@@ -1,5 +1,59 @@
-- title: Introduction to Blockchain
-  shortTitle: Blockchain Intro
-  key: introduction-to-blockchain
+- title: Introduction to Derivatives
+  shortTitle: Derivatives Intro
+  key: introduction-to-derivatives
   details: |
-    Details of the section
+    - Derivatives are one of the essential features of a mature financial system. As the name clearly suggests derivatives derive their value from something (asset). The price of the derivatives is the price of the underlying asset in the derivatives such as a stock, a bond, a commodity, an interest rate, a currency or a cryptocurrency.
+    - Some of the most common forms of derivatives that are present in the current financial system are forwards, futures, options and swaps. There are two main uses of derivatives: Hedging and Speculation.
+    - Hedging
+      * Hedging allows the management of financial risks. To understand hedging consider an example of a farmer that primarily focuses on growing wheat. The wheat price can fluctuate throughout the year depending on the current demand and supply. As the farmer plant wheat, they are committed to it for the entire growing season which possesses a big risk in the case when the price of wheat is low when the harvest time comes. To accommodate this risk the farmer will sell short wheat futures contracts for the amount they predict to harvest. Gradually as the time of the harvest approaches the farmer will close their position and incur a profit or loss based on the current price of the wheat. If the price of wheat is lower compared to the anticipated price then the short position makes a profit that offsets the loss from selling the actual wheat whereas if the current price is higher then the short position will be at a loss but profit from selling the wheat offsets the loss. Thus it concludes that whatever the price of wheat the farmer could easily predict their payout.
+      * Yield farmers in the decentralised can also use hedging to offset a potential that can occur if the price of one of the tokens used for yield farming loses its value in relation to another token.
+    - Speculations
+      * In a lot of financial instruments including derivatives, speculation can represent a significant amount of traded volume. This is because derivatives offer an easy exposure to particular assets that may be hard to access otherwise, for example, trading oil futures rather than oil barrels.
+      * Speculations can also provide easy access to leverage. A trader can purchase a call or a put option by providing only enough funds to cover the options premium and gain exposure to a significant amount of underlying assets. Speculators are important market participants as they provide liquidity to the market and allow people who actually need to buy a particular derivative to hedge the risk to easily enter and exit the market.
+      * Derivatives have a prolonged interesting history. From using clay tokens and fur letters to buy and sell agricultural commodities in medieval Europe to the establishment of the Chicago Board of Trade in 1848 -one of the world's oldest futures and options exchanges.
+
+- title: Derivatives Types
+  shortTitle: Derivatives Types
+  key: types-of-derivatives
+  details: |
+    Financial derivatives combine usually of 4 most important parameters - Futures, Options, Swaps and Forwards.
+
+    - Forwards
+      * An agreement to buy or sell an asset at a given price on a specific date in the future is known as a forward contract, which is frequently abbreviated to just "forward." In order to prevent price fluctuation, forward contracts can be utilised to lock in a set price. 
+      * A forward contract's buyer and seller each take on a position, with the buyer taking a long position and the seller taking a short position. The long position gains if the value of the underlying asset rises. The short position gains from a decline in the price of the underlying asset.
+    
+    - Futures
+      *Futures are financial derivative contracts that bind parties to buy or sell an asset at a specified future time and price. Regardless of the market price at the date of expiration, the buyer or seller must buy or sell the underlying asset at the agreed-upon price. 
+      * A forward contract is an individual, flexible contract that settles at its conclusion and is traded over the counter. The parameters of a futures contract are standardised, and it is traded on an exchange where prices are settled every day until the contract's expiration.
+
+    - Options
+      * Options are a type of derivative financial transaction in which two parties contractually agree to exchange an asset for cash at a given price ahead of a future date. An option grants its owner the choice to buy or sell a security at the exercise price, but the owner is not required to do so.
+
+    - Swaps
+      * Through a derivative contract known as a swap, two parties can exchange the liabilities or cash flows from two various financial instruments. An interest rate swap is the most typical type of exchange. In general, swaps are not traded on exchanges or used by regular investors. Instead, swaps are specialised over-the-counter (OTC) contracts that are made to meet the interests of both parties and are typically made between businesses or financial organisations.
+
+- title: Derivatives Protocols
+  shortTitle: Derivatives Org
+  key: protocols-in-derivatives
+  details: |
+    - The total market of the derivatives is considered to be as high as one quadrillion dollars which is far more when compared stock market, bond markets or the merging cryptocurrency market. Ever-growing market naturally develops its own derivatives market that can end up being an order of magnitude bigger than its underlying market. This is the reason why many people in the decentralised finance space are extremely bullish on the potential of decentralised derivatives that in contrast to traditional finance can be created by anyone in a completely permissionless and open way. This in turn increases the rate of innovation that has been stagnating in traditional finance. There are various derivative protocols that are emerging in the decentralised finance space. Henceforth we are going to discuss Yield Protocol, Synthetix and others.
+
+    - Yield Protocol
+      * Yield Protocol proposes a derivative model for secured, zero-coupon bonds. This enables fixed-rate borrowing. Essentially, the protocol defines a yToken to be an ERC -20 (fungible) token that settles in some fixed quantity of a target asset at a specified date. The contract will specify that the tokens, which have the same expiry, target asset, collateral asset, and collateralization ratio, are fungible. 
+      * To understand the need for a fixed rate of borrowing let us consider an example.  Suppose you think that ETH is going to appreciate by 10% over the next year. So, what you can do is deposit your ETH into let's say maker and borrow DAI. and pay 3% in terms of an interest rate. So, if the ETH goes up by 10% you can do the mathematics that well. Your assets go up by 10%. You have borrowed and you need to pay 3%. So, you've got a profit of 7%. So that works so well the problem is that that rate that's 3% is not set in stone. They can change. And if that rate for example went to 10% then even if the maker goes up in value. You have to pay the 10% and you make nothing. Hence there is a need for a fixed rate of borrowing.
+      * The tokens are secured by the collateral asset and have a required maintenance collateralization ratio similar to, for example, MakerDAO and other DeFi platforms. If the collateral’s value dips below the maintenance requirement, the position can be liquidated by a keeper with some or all of the collateral sold to cover the debt.
+      * The Yield Protocol can be used to speculate on interest rates. There exist a few DAI derivative assets that represent a variable interest rate (Compound cDAI, Aave aDAI, Chai). One can imagine a seller of yDAI using one of these DAI derivative assets as collateral. The effect of this transaction is that the seller is paying the fixed rate on the yDAI while receiving the variable rate on the collateral. This is a bet that rates will increase. Likewise purchasing yDAI (of any collateral type) is a bet that variable rates will NOT increase beyond the fixed rate received.
+      * Yield is an important protocol that supplies fixed-rate products to Ethereum. It can be tightly integrated with protocols like MakerDAO and Compound to create robust interest-bearing applications for investors. Demand for fixed income components will grow as mainstream investors begin adopting DeFi with portfolios in need of these types of assets.
+    
+    - Synthetix
+      * Synthetix is one of the most important derivatives in the Defi space. Synthetix allows for the creating synthetix assets that track the price of their underlying assets. The protocol currently supports synthetic fiat currencies, cryptocurrencies and commodities that can be traded on trading platforms such as Kwenta, D hedge or paraswap.
+      * Synthetix model is based on a debt pool. In order to issue a particular synthetix asset, a user has to provide collateral in the form of the SNX token. The protocol is highly over collateralised at 500% this means that for each $500 SNX locked in the system only $100 worth synthetix assets can be issued. This is mainly to absorb any sharp price changes in the synthetix assets and the collateralization ratio will be most likely lowered in the future.
+      * Synthetix is one of the first DeFi projects leading the effort of moving to layer 2 in order to lower the gas fees and make the protocol more scalable. There is currently more than $1.8 Billion locked in the synthetix protocol, which is the biggest number across all the DeFi derivatives protocols by a wide margin.
+
+    - UMA 
+      * UMA is another protocol that enables the creation of synthetic assets. The main difference here is that UMA instead of highly overcollateralizing the protocol relies on the liquidators who are financially incentivized to find improperly collateralized positions and liquidate them.
+      * UMA’s model allows for creating priceless derivatives. This is because the model does not rely on price oracles. This in turn allows for adding a very long tail of synthetic assets that otherwise wouldn’t have a reliable price feed hence it wouldn’t be possible to create them in synthetix. There is currently over $63 Million of total value locked in UMA’s smart contracts.
+      
+    - Hegic
+      * Hegic is a relatively new DeFi project that allows for trading options in a non-custodial and permissionless way. Users can buy put or call options on ETH and BT. They can also become liquidity providers and sell ETH calls and put options. Three months after the launch Hegic had almost $100 million in total value locked in the protocol, a total cumulative options trading volume of around $168 million and generated over $3.5 Million in fees. Interestingly Hegic has been developed by a single anonymous developer which shows the power of DeFi whereas in contrast to traditional finance even a single person or a small group of people can build a useful financial product.
+
