--- a/src/course.yaml
+++ b/src/course.yaml
@@ -118,7 +118,7 @@ topics:
     status: To Do
     completionWeek: First Week September
   - title: Stable Coins
-    key: tokenization
+    key: stable-coins
     details: |
       Why Stable Coins, Different Types of stable coins
       
