--- a/src/questions/stable_coins.yaml
+++ b/src/questions/stable_coins.yaml
@@ -35,7 +35,7 @@
       key: B
     - content: They offer protection for traders and investors during market volatility
       key: C
-    - content: They are backed by real-world assets, like the US dollar, or commodities such as gold
+    - content: Many of the stable coins are backed by real-world assets, like the US dollar, or commodities such as gold
       key: D
 - uuid: 3442f18e-822f-4b30-bae6-c7efe0b8fd29
   type: MultipleChoice
@@ -64,18 +64,18 @@
   explanation: Stablecoins are open, worldwide, and available to everyone on the internet at any time. They transmit quickly, cheaply, and securely.
   answerKeys:
     - B
-    - D
+    - C
   subTopics:
     - stablecoins-intro
   difficultyLevel: Low
   choices:
     - content: Slow transfer speed
       key: A
-    - content: Low transaction fees
+    - content: Less volatility
       key: B
-    - content: High transaction fees
-      key: C
     - content: Global processing
+      key: C
+    - content: None of the above
       key: D
 - uuid: e924cbdc-d7d8-4639-a2af-9151d8bbabbe
   type: SingleChoice
@@ -148,7 +148,7 @@
   choices:
     - content: Each stablecoin makes a significant concession in one of the other two dimensions of the trilemma.
       key: A
-    - content: The peg has been held pretty successfully over the past few years by stablecoins.
+    - content: The peg has been held pretty successfully over the past few years by some stablecoins like USDC, DAI, USDT etc.
       key: B
     - content: The peg has been uncontrollable over the past few years by stablecoins.
       key: C
@@ -177,7 +177,7 @@
   type: MultipleChoice
   content: What were the reasons that helped MakerDAO's DAI gain popularity?
   hint: centralization and nontransparent
-  explanation: The stablecoin issuer needs a centralized banking system in order to back the token with real Fiat money, such as USD. The level of centralization that resulted, together with the fact that some fiat-backed stablecoins lacked information on the fiat reserves held in bank accounts, helped on-chain and crypto-backed stablecoins like MakerDAO's Dai to take off.
+  explanation: Conventional fiat-backed stablecoin issuer needs a centralized banking system in order to back the token with real Fiat money, such as USD. The level of centralization that resulted, together with the fact that some fiat-backed stablecoins lacked information on the fiat reserves held in bank accounts, helped on-chain and crypto-backed stablecoins like MakerDAO's Dai to take off.
   answerKeys:
     - A
     - C
@@ -185,7 +185,7 @@
     - types
   difficultyLevel: Low
   choices:
-    - content: Stablecoin issuer needs a centralized banking system in order to back the token with real Fiat money
+    - content: Conventional fiat-backed stablecoin issuer needs a centralized banking system in order to back the token with real Fiat money
       key: A
     - content: The level of decentralization was high in fiat-backed stablecoins
       key: B
@@ -277,16 +277,16 @@
   hint: NoHint
   explanation: Stablecoins are safe against crypto volatility. Changes in price are minimal i.e. high level of stability. They serve as a point of entry for professional capital and support future market expansion.
   answerKeys:
-    - A
+    - B
     - C
     - D
   subTopics:
     - fiat-backed
   difficultyLevel: Low
   choices:
-    - content: Centralized i.e. someone must issue the tokens.
+    - content: Centralized i.e. governments can interfere and seize the assets of fiat-backed stablecoin suppliers, in unprecedented situations.
       key: A
-    - content: Safe against crypto volatility.
+    - content: Safe against crypto volatility
       key: B
     - content: Changes in price are minimal
       key: C
@@ -296,22 +296,21 @@
   type: MultipleChoice
   content: What are some cons of fiat-backed stablecoins? 
   hint: Disadvantages related to transparency and centralization
-  explanation: Fiat-backed stablecoins are centralized i.e. someone must issue the tokens. Requires auditing to ensure the company has sufficient reserves. Suppliers' lack of transparency and accountability. Customers must go through an AML and KYC process in order to borrow stablecoins against USD
+  explanation: Fiat-backed stablecoins are centralized i.e. governments can interfere and seize the assets of fiat-backed stablecoin suppliers, in unprecedented situations. Requires auditing to ensure the company has sufficient reserves. Suppliers' can have lack of transparency and accountability. Customers must go through an AML and KYC process in order to borrow stablecoins against USD
   answerKeys:
     - A
     - B
-    - D
   subTopics:
     - fiat-backed
   difficultyLevel: Low
   choices:
-    - content: Suppliers' lack of transparency and accountability.
+    - content: Suppliers' can have lack of transparency and accountability.
       key: A
-    - content: Customers must go through an AML and KYC process in order to borrow stablecoins against USD
+    - content: Centralized i.e. governments can interfere and seize the assets of fiat-backed stablecoin suppliers, in unprecedented situations
       key: B
     - content: Changes in price are minimal
       key: C
-    - content: Centralized i.e. someone must issue the tokens.
+    - content: None of the above
       key: D
 - uuid: 349333e5-d30e-4751-8418-9168efe080dd
   type: MultipleChoice
@@ -507,7 +506,7 @@
       key: B
 - uuid: 90b28758-cb10-443d-a74e-f6417eccb0ed
   type: SingleChoice
-  content: Commodity-backed stablecoins may or may not be redeemable for the physical asset. What do you think?
+  content: Commodity-backed stablecoins may or may not be redeemable for the physical asset. Do you agree?
   hint: NoHint
   explanation: Commodity-backed stablecoins may or may not be redeemable for the physical asset.
   answerKeys:
@@ -516,11 +515,11 @@
     - commodity-backed
   difficultyLevel: Low
   choices:
-    - content: Commodity-backed stablecoins are always redeemable for the physical asset
+    - content: No, Commodity-backed stablecoins are always redeemable for the physical asset
       key: A
-    - content: Commodity-backed stablecoins are never redeemable for the physical asset
+    - content: No, Commodity-backed stablecoins are never redeemable for the physical asset
       key: B
-    - content: Commodity-backed stablecoins may or may not be redeemable for the physical asset
+    - content: Yes, Commodity-backed stablecoins may or may not be redeemable for the physical asset
       key: C
     - content: Can not say anything
       key: D
@@ -585,7 +584,7 @@
       key: D
 - uuid: 8152931c-e79f-422f-80c3-6259c878257f
   type: SingleChoice
-  content: What is the ratio in which one Tether Gold (XAUT) is pegged?
+  content: What is the ratio in which one Tether Gold (XAUT) is pegged to one fine troy ounce of gold on a London Good Delivery bar?
   hint: equal
   explanation: Like Paxos Gold, one XAUt token is pegged 1:1 to the value of one fine troy ounce of gold on a London Good Delivery bar.
   answerKeys:
@@ -638,7 +637,7 @@
       key: B
 - uuid: e8a9fcfd-5250-4d7b-8314-3e5e480fdf63
   type: MultipleChoice
-  content: Choose the correct statement(s).
+  content: Choose the correct statement(s) about Rebase Algorithmic Stablecoins.
   hint: NoHint
   explanation: Since there is no other asset backing these stablecoins, if the price drops below the targeted level, an algorithm will sell tokens, and if the price rises above the acceptable level, it will supply tokens.
   answerKeys:
@@ -648,13 +647,13 @@
     - algorithmic
   difficultyLevel: Medium
   choices:
-    - content: If the price drops below the targeted level, an algorithm will sell tokens
+    - content: If the token's price falls below the price of the fiat currency it follows, an algorithmic stablecoin system burns the supply in circulation.
       key: A
-    - content: If the price drops below the targeted level, an algorithm will supply tokens
+    - content: If the token's price falls below the price of the fiat currency it follows, an algorithmic stablecoin system mints the supply in circulation.
       key: B
-    - content: If the price rises above the acceptable level, an algorithm will supply tokens
+    - content: If the token's price exceeds the price of the fiat currency it follows, fresh tokens are added to the circulation to reduce the stablecoin's value.
       key: C
-    - content: If the price rises above the acceptable level, an algorithm will sell tokens
+    - content: If the token's price exceeds the price of the fiat currency it follows, fresh tokens are burned from the circulation to reduce the stablecoin's value.
       key: D
 - uuid: c6bf95c2-35c2-4b2a-b111-71b68a9d7198
   type: SingleChoice
@@ -696,9 +695,9 @@
       key: D
 - uuid: 7167c625-3662-4840-a829-fbc06f65db16
   type: SingleChoice
-  content: In the event that investors choose to exchange their algorithmic stablecoins, what does the protocol do?
+  content: In the event that investors choose to sell-off their algorithmic stablecoins, what does the protocol do?
   hint: supplies more
-  explanation: In the event that investors choose to exchange their stablecoins, the protocol creates a new price-floating token while the stablecoin supply fluctuates.
+  explanation: In the event that investors choose to sell-off their stablecoins, the protocol creates a new price-floating token while the stablecoin supply fluctuates.
   answerKeys:
     - C
   subTopics:
@@ -792,9 +791,9 @@
       key: D
 - uuid: 6d631464-38aa-4f87-bb7a-1ac4c154f4da
   type: SingleChoice
-  content: What is Terra's basic staking token?
+  content: What was Terra's basic staking token?
   hint: NoHint
-  explanation: Luna is the Terra protocol's native staking token
+  explanation: Luna was the Terra protocol's native staking token
   answerKeys:
     - B
   subTopics:
@@ -900,61 +899,4 @@
     - content: They are pegged to the value of that country's fiat currency
       key: C
     - content: They are pegged to the value of USD.
-      key: D
-- uuid: fae8a2df-29a5-411f-827c-8d517bd5f960
-  type: MultipleChoice
-  content: question
-  hint: NoHint
-  explanation: explanation
-  answerKeys:
-    - A
-  subTopics:
-    - stablecoins-intro
-  difficultyLevel: Low
-  choices:
-    - content: option 1
-      key: A
-    - content: option 2
-      key: B
-    - content: option 3
-      key: C
-    - content: option 4
-      key: D
-- uuid: faea80f6-686e-41a4-b364-41c07058bd3d
-  type: MultipleChoice
-  content: question
-  hint: NoHint
-  explanation: explanation
-  answerKeys:
-    - A
-  subTopics:
-    - stablecoins-intro
-  difficultyLevel: Low
-  choices:
-    - content: option 1
-      key: A
-    - content: option 2
-      key: B
-    - content: option 3
-      key: C
-    - content: option 4
-      key: D
-- uuid: 2ee2566d-1d3a-470e-88e6-f88fec31935f
-  type: MultipleChoice
-  content: question
-  hint: NoHint
-  explanation: explanation
-  answerKeys:
-    - A
-  subTopics:
-    - stablecoins-intro
-  difficultyLevel: Low
-  choices:
-    - content: option 1
-      key: A
-    - content: option 2
-      key: B
-    - content: option 3
-      key: C
-    - content: option 4
       key: D
