--- a/src/course.yaml
+++ b/src/course.yaml
@@ -1,4 +1,4 @@
-title: DeFi 101 Course
+title: DeFi 101 Course (work in progress)
 key: defi-course
 summary: |
   Decentralised Finance (DeFi) is the upcoming revolution in the world which would result in the complete transformation in the functioning of the finance sector using blockchain technology as its core.
