--- a/src/explanations/derivatives.yaml
+++ b/src/explanations/derivatives.yaml
@@ -3,29 +3,43 @@
   key: introduction-to-derivatives
   details: |
     - Derivatives are one of the essential features of a mature financial system. As the name clearly suggests derivatives derive their value from something (asset). The price of the derivatives is the price of the underlying asset in the derivatives such as a stock, a bond, a commodity, an interest rate, a currency or a cryptocurrency.
+
     - Some of the most common forms of derivatives that are present in the current financial system are forwards, futures, options and swaps. There are two main uses of derivatives: Hedging and Speculation.
+
     - Hedging
       * Hedging allows the management of financial risks. To understand hedging consider an example of a farmer that primarily focuses on growing wheat. The wheat price can fluctuate throughout the year depending on the current demand and supply. As the farmer plant wheat, they are committed to it for the entire growing season which possesses a big risk in the case when the price of wheat is low when the harvest time comes. To accommodate this risk the farmer will sell short wheat futures contracts for the amount they predict to harvest. Gradually as the time of the harvest approaches the farmer will close their position and incur a profit or loss based on the current price of the wheat. If the price of wheat is lower compared to the anticipated price then the short position makes a profit that offsets the loss from selling the actual wheat whereas if the current price is higher then the short position will be at a loss but profit from selling the wheat offsets the loss. Thus it concludes that whatever the price of wheat the farmer could easily predict their payout.
+
       * Yield farmers in the decentralised can also use hedging to offset a potential that can occur if the price of one of the tokens used for yield farming loses its value in relation to another token.
+
     - Speculations
       * In a lot of financial instruments including derivatives, speculation can represent a significant amount of traded volume. This is because derivatives offer an easy exposure to particular assets that may be hard to access otherwise, for example, trading oil futures rather than oil barrels.
+
       * Speculations can also provide easy access to leverage. A trader can purchase a call or a put option by providing only enough funds to cover the options premium and gain exposure to a significant amount of underlying assets. Speculators are important market participants as they provide liquidity to the market and allow people who actually need to buy a particular derivative to hedge the risk to easily enter and exit the market.
+
       * Derivatives have a prolonged interesting history. From using clay tokens and fur letters to buy and sell agricultural commodities in medieval Europe to the establishment of the Chicago Board of Trade in 1848 -one of the world's oldest futures and options exchanges.
 - title: Derivatives Types
   shortTitle: Derivatives Types
   key: types-of-derivatives
   details: |
     Financial derivatives combine usually of 4 most important parameters - Futures, Options, Swaps and Forwards.
+
     - Forwards
+
       * An agreement to buy or sell an asset at a given price on a specific date in the future is known as a forward contract, which is frequently abbreviated to just "forward." In order to prevent price fluctuation, forward contracts can be utilised to lock in a set price. 
+
       * A forward contract's buyer and seller each take on a position, with the buyer taking a long position and the seller taking a short position. The long position gains if the value of the underlying asset rises. The short position gains from a decline in the price of the underlying asset.
     
     - Futures
       * Futures are financial derivative contracts that bind parties to buy or sell an asset at a specified future time and price. Regardless of the market price at the date of expiration, the buyer or seller must buy or sell the underlying asset at the agreed-upon price. 
+
       * A forward contract is an individual, flexible contract that settles at its conclusion and is traded over the counter. The parameters of a futures contract are standardised, and it is traded on an exchange where prices are settled every day until the contract's expiration.
+
     - Options
+
       * Options are a type of derivative financial transaction in which two parties contractually agree to exchange an asset for cash at a given price ahead of a future date. An option grants its owner the choice to buy or sell a security at the exercise price, but the owner is not required to do so.
+
     - Swaps
+
       * Through a derivative contract known as a swap, two parties can exchange the liabilities or cash flows from two various financial instruments. An interest rate swap is the most typical type of exchange. In general, swaps are not traded on exchanges or used by regular investors. Instead, swaps are specialised over-the-counter (OTC) contracts that are made to meet the interests of both parties and are typically made between businesses or financial organisations.
   
     Futures and Options are two most important type of financial derivatives because they are traded on exchange.
@@ -34,21 +48,21 @@
   shortTitle: Futures Detail
   key: futures-depth
   details: |
-    Futures are financial derivative contracts that bind parties to buy or sell an asset at a specified future date and price. Regardless of the market price at the date of expiration, the buyer or seller must buy or sell the underlying asset at the agreed-upon price.
+    - Futures are financial derivative contracts that bind parties to buy or sell an asset at a specified future date and price. Regardless of the market price at the date of expiration, the buyer or seller must buy or sell the underlying asset at the agreed-upon price.
 
 
-    Physical commodities and financial instruments are examples of underlying assets. Futures contracts are standardised to make trading on a futures market easier and specify the quantity of the underlying asset. Futures can be utilised for trade speculation or hedging.
+    - Physical commodities and financial instruments are examples of underlying assets. Futures contracts are standardised to make trading on a futures market easier and specify the quantity of the underlying asset. Futures can be utilised for trade speculation or hedging.
 
 
-    Futures or Futures contracts have an expiration date and their price is known beforehand. These contracts are identified by their expiration month. For example, November futures will expire in the month of November.
+    - Futures or Futures contracts have an expiration date and their price is known beforehand. These contracts are identified by their expiration month. For example, November futures will expire in the month of November.
 
-    There are primarily 5 types of futures-
+    - There are primarily 5 types of futures-
 
-    1. `Commodity Futures` which consist of crude oil, wheat, natural gas etc.
-    2. `Stock index future` with underlying assets such as the S&P 500 Index.
-    3. `Currency futures` which represent British Pound and Euro
-    4. `Precious Metals` such as gold or silver
-    5. `U.S. treasury futures` with underlying bond and financial securities
+      1. `Commodity Futures` which consist of crude oil, wheat, natural gas etc.
+      2. `Stock index future` with underlying assets such as the S&P 500 Index.
+      3. `Currency futures` which represent British Pound and Euro
+      4. `Precious Metals` such as gold or silver
+      5. `U.S. treasury futures` with underlying bond and financial securities
 
     - Trading of Futures Contract  
       * Futures Contracts are a type of financial instrument through which a buyer can wager on the future price of a commodity or other security.
@@ -57,10 +71,12 @@
 
 
     - Hedging through futures
+
       * Futures can be used to hedge against price fluctuations in the underlying asset. In this instance, preventing losses from potentially negative price movements is the goal rather than engaging in speculation. Many businesses engage in hedging or, in certain situations, produce the underlying asset.
 
 
     - Speculation through futures
+    
       * A trader can make predictions (speculate) about the course of a commodity's price using a futures contract. The trader would profit if a futures contract and the commodity's price rose to trade above the contract's starting price at expiration. The futures contract—the long position—would be sold at the current price before expiration, so completing the long position.
 
     - Buyer and Seller 
